# file-catalog

./: --old.cpp  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  client.bat  client.cpp  compile.bat  compile.sh  console-gui.bat  console-gui.cpp  consolegui.cpp  coo  debug  file-catalog.cbp  file-catalog.depend  index.html  main.cpp  personal-release  server.bat  server.cpp  tests.cpp
--remove/: imath.h
--remove/pixel/: olcPixelGameEngine.h  pixelbox.h
Debug/: index.tdb
cataloging/: cindex.h  cursesgui.h  disc.h  file.h  handler.h  paramparser.h  tag.h  taghandler.h  tagmanager.h
cataloging/database/: database.h  reader.h  writer.h
gui-engine/pixel/: box.h  image.h  png.cpp  png.h
misc/: config.h  idmanager.h  serverConfig.h  sha.h
network/: client.h  fc_packet.h  networker.h  packet.h  packet.txt  server.h  userCountPacket.h
src/: archive.cpp  archive.h  bitarray.cpp  bitarray.h  file-catalog-gui.cpp  file-catalog-gui.h  file.cpp  file.h  idManager.cpp  idManager.h  index.cpp  index.h  intobjectarray.h  jaggedbitarray.cpp  jaggedbitarray.h  objectHandler.h  sha.cpp  sha.h  shatwofivesix.h  tag.cpp  tag.h  tests.cpp
